[gd_scene load_steps=5 format=3 uid="uid://c6ms2a512vxpt"]

[ext_resource type="Script" path="res://components/playerChip/playerChip.gd" id="1_mhqsr"]
[ext_resource type="Script" path="res://scripts/GPUParticlesExplosion.gd" id="2_w7u12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjl8r"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.85098, 0.423529, 0.423529, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Curve" id="Curve_6k6ny"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.252747), 0.0, 0.0, 0, 0]
point_count = 2

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -23.5
offset_right = 25.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_wjl8r")
script = ExtResource("1_mhqsr")

[node name="fullNameChip" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="fullName" type="Label" parent="fullNameChip"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Andy"

[node name="FirstLetterChip" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 6

[node name="firstLetter" type="Label" parent="FirstLetterChip"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="explosion" type="CPUParticles2D" parent="FirstLetterChip"]
position = Vector2(25, 25)
scale = Vector2(1.55537, 1.75873)
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 60.0
scale_amount_min = 2.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_6k6ny")
script = ExtResource("2_w7u12")

[node name="Timer" type="Timer" parent="FirstLetterChip/explosion"]
wait_time = 0.1
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="FirstLetterChip/explosion/Timer" to="FirstLetterChip/explosion" method="timerEnd"]
